# mit_cpp

./: .gitignore  .gitmodules  2.2.1  2.2.2  3.1  3.1.1.cpp  3.1.2  3.3  3.4  4.1  4.5  4.5.cpp  7.1  7.2  7.3  7.4  7.4.cpp  7.5  Makefile  README.md  arrayOfObjects.cpp  arrays  assert  classTemplate.cpp  debug  debug.cpp  exceptions  exceptions.cpp  files.cpp  functionPointer.cpp  functionTemplate.cpp  functions  functions.cpp  morestrings  morestrings.cpp  namespace.cpp  newOperator  newOperator.cpp  operatorOverload.cpp  point.cpp  (+11 more)
ClassTemplate/: App  App.cpp  Child  Child.cpp  Child.h  ClassTemplate.cpp  ClassTemplate.h  Super.cpp  Super.h
assignment-1/: 2.2.1.cpp  2.2.2.cpp  3.3.cpp  3.4.cpp
assignment-2/: 4.1.cpp  7.1.cpp
assignment-3/point/: app.cpp
assignment-3/point_array/: Makefile  README  point_array.cpp  point_array.h
assignment-3/polygon/: README  polygon.cpp  polygon.h  rectangle.h  triangle.h
assignment-3/strings/: CMakeLists.txt  app.cpp  strings.h  word.cpp  word.h
assignment-3/strings/test/: mock_word.h  strings_test.cpp  test_word.cpp
assignment-4/casting/: casting_3_1_and_2.txt
assignment-4/graph_representation/: Makefile  graph.cpp  graph.h  runner.cpp
assignment-4/min/: CMakeLists.txt  min.cpp  min_2_2.cpp
assignment-4/templated_stack/: Makefile  runner.cpp  stack  templated_stack_4_1.cpp  templated_stack_4_1.h
assignment_3/: strings.cpp
assignment_3/point/: point.cpp  point.h  test  test.cpp
assignment_3/point_array/: .point_array.cpp.swo  Makefile  README  point_array  point_array.cpp  point_array.h
assignment_3/polygon/: 5.6-Questions  Makefile  README  geometry.cpp  polygon  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
assignment_3/strings/: CMakeLists.txt  strings.cpp  word.cpp  word.h
assignment_3/strings/test/: test_word.cpp
assignment_3/tests/: point_test.cpp
assignments/assignment-1/: 3.1.2.cpp  3.1.cpp
assignments/assignment-2/: 7.2.cpp  7.3.cpp  7.5.cpp
c_stuff/: malloc.c  static.c  static.cpp
classes/: App.cpp  Child.h
misc_code_samples/: arrayOfObjects.cpp  arrays.cpp  assert.cpp  classTemplate.cpp  const.cpp  enums.cpp  newOperator.cpp  non_type_template.cpp  operatorOverload.cpp  pointers.cpp  shared_ptr.cpp  strings.cpp  template.cpp  type_casting.cpp  typedef.cpp  union.cpp
misc_code_samples/bitwise/: .gitignore  Makefile  and  and.c  not  not.c  or  or.c  xor  xor.c  xor_challenge  xor_challenge.c
misc_code_samples/classes/: App  Child.cpp  Super.cpp
misc_code_samples/shared_lib_example/: README  foo.h
misc_code_samples/stl/: deque.cpp  set.cpp  vector.cpp
shared_lib_example/: foo.cpp  main.cpp  test
stl/: Makefile  set.cpp
(+11 files in other folders)
